# pytest-cov

./: .appveyor.yml  .bumpversion.cfg  .cookiecutterrc  .coveragerc  .editorconfig  .flake8  .git-blame-ignore-revs  .gitignore  .hgignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .readthedocs.yml  .ruff.toml  .taplo.toml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  README.txt  appveyor.yml  cov_core.py  cov_core_init.py  pyproject.toml  pytest.ini  pytest_cov.py  pytest_cov_init.py  requirements_test.txt  setup.cfg  setup.py  test_pytest_cov.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  support_request.md
.github/workflows/: examples.yml  test.yml
ci/: appveyor-bootstrap.py  appveyor-with-compiler.cmd  bootstrap.py  requirements.txt
ci/templates/: .appveyor.yml  .travis.yml  appveyor.yml  tox.ini
ci/templates/.github/workflows/: test.yml
cov-core/: .gitignore  cov_core.py  cov_core_init.py  setup.py
docs/: conf.py  config.rst  contexts.rst  debuggers.rst  index.rst  installation.rst  markers-fixtures.rst  mp.rst  plugins.rst  readme.rst  releasing.rst  reporting.rst  requirements.txt  subprocess-support.rst  tox.rst  usage.rst  xdist.rst
docs/reference/: index.rst  pytest_cover.rst
example/: .coveragerc  tox.ini
example-tox-project/: setup.py  tox.ini
example/mylib/: __init__.py
example/tests/: test_mylib.py
examples/adhoc-layout/: setup.py  tox.ini
examples/adhoc-layout/example/: __init__.py
examples/adhoc-layout/tests/: test_example.py
examples/branch/: setup.py  tox.ini
examples/branch/example/: __init__.py
examples/branch/tests/: test_example.py
examples/src-layout/: .coveragerc  setup.py  tox.ini
pytest-cov/: .gitignore  MANIFEST.in  README.rst  pytest_cov.py  setup.py  test_pytest_cov.py  tox.ini
pytest_cov/: pytest_cov.py
pytest_cover/: pytest_cover.py
src/: pytest-cov.embed  pytest-cov.pth  pytest-cover.embed  pytest-cover.pth
src/pytest_cov/: __init__.py  compat.py  embed.py  engine.py  plugin.py
src/pytest_cover/: embed.py  engine.py  plugin.py
tests/: conftest.py  contextful.py  test_pytest_cov.py  test_pytest_cover.py
